Update API to 2.1.0